--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-site/*
-apache-jmeter*
-jmeterscripts/example.jmx
-.logs
-__pycache__
-notes.txt
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
