--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -13,6 +13,7 @@ theme:
   custom_dir: docs/overrides
   features:
     - content.code.copy
+    - content.tabs.link
   palette:
 
   # Palette toggle for automatic mode
@@ -48,6 +49,8 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.snippets:
       base_path: ["docs"]
+  - pymdownx.tabbed:
+      alternate_style: true
 
 plugins:
     - search
